--- a/chat_Bot_practbca/Chatbot.html
+++ b/chat_Bot_practbca/Chatbot.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style_chatBot/styleChat.css">
     <link rel="stylesheet" href="css/style_chatBot/button_footer.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link type="image/png" sizes="120x120" rel="icon" href="img/favicon.png">
 </head>
 <body>
     
@@ -15,7 +16,7 @@
 
      <!-- Ссылки на другие страницы -->
     <div class="links">
-        <a class="link" href="/">Помощь</a>
+        <a class="link" href="/help">Помощь</a>
         <a class="link" href="/system">Наша команда</a>
     </div>
 
