--- a/chat_Bot_practbca/Help.html
+++ b/chat_Bot_practbca/Help.html
@@ -116,7 +116,7 @@
       <leftleg></leftleg>
     </boi>
     
-    <svg xmlns="http://www.w3.org/2000/svg">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg">
       <filter id="inset" x="-50%" y="-50%" width="200%" height="200%">
         <feFlood flood-color="black" result="outside-color"/>
         <feMorphology in="SourceAlpha" operator="dilate" radius="3.5"/>
@@ -128,5 +128,5 @@
           <feMergeNode in="inside-stroke"/>
         </feMerge>
       </filter>
-    </svg>
+    </svg> -->
 </body>
