--- a/chat_Bot_practbca/index.html
+++ b/chat_Bot_practbca/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>web_space_scale</title>
 
-  <!-- <link type="image/png" sizes="120x120" rel="icon" href="img/favicon.png"> -->
+  <link type="image/png" sizes="120x120" rel="icon" href="img/favicon.png">
 
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/styles_scale/articleType1.css">
